--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "start": "concurrently \"npm run start:client\" \"npm run start:server\"",
     "start:client": "react-scripts start",
     "start:server": "node src/auth/server.js",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
